# GK-Projekt-4

./: .gitignore  CMakeLists.txt  Readme.md
dependencies/: stb_image.cpp
dependencies/assimp/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
resources/models/cleopatra/: license.txt  scene.gltf
resources/models/discobolus/: license.txt  scene.gltf
resources/models/low_poly_forest_4/: license.txt  scene.gltf
resources/models/poke_ball/: license.txt
resources/models/potrait_of_philosopher_sokrates/: license.txt  scene.gltf
shaders/: final_light_frag.glsl  final_light_vert.glsl  lig_deferred_frag.glsl  light_frag.glsl  test2_frag.glsl  test3_frag.glsl  test_frag.glsl  test_vert.glsl
shaders/not used/: light_vert.glsl
src/: main.cpp
src/primitives/: FlyCamera.cpp  FlyCamera.h  LightSource.cpp  LightSource.h  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  myWindow.cpp  myWindow.h
